syntax = "proto3";

package raftcache;

message Node {
  enum Statuses {
    ALONE = 0;
    INGROUP = 1;
    DISCONNECTED = 2;
  }

  string Group = 1;
  string ListenAddr = 2;
  Statuses Status = 3;
}

message JoinResp {
  enum Results {
    SUCCESS = 0;
    ALREADYJOINED = 1;
    REJECTED = 2;
  }

  Results Result = 1;
  string Message = 2;
  repeated Node GroupNodes = 3;
}

message LeaveResp {}

service RaftCache {
  rpc Join(Node) returns (JoinResp) {};
  rpc Leave(Node) returns (LeaveResp) {};
}